Fix Bug 39096 - Narayam compatibility with ULS
* Correct the event propagation
* Narayam blue background prevents the autocomplete visible. Overriding
 background color with transparent, but that does not look good. May be we
should consider this while designing jquery.ime

--- a/css/jquery.uls.css
+++ b/css/jquery.uls.css
@@ -154,7 +154,7 @@ input#languagefilter {
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
 	color: #333;
 	display: block;
-	background-color: transparent;
+	background-color: transparent !important;
 }
 
 input:focus#languagefilter {
